--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/js": "^9.34.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.34.0",
-    "typescript": "~5.8.3"
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.41.0"
   },
   "private": true
 }
