--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.56.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.6",
+    "expo": "54.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-sharing": "~14.0.7",
