--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,16 @@ jobs:
       - name: 1. Baixar o código do repositório
         uses: actions/checkout@v4
 
-      - name: 2. Configurar ambiente Node.js
+      - name: 2. Configurar PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: 3. Configurar ambiente Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: 3. Configurar PNPM
-        uses: pnpm/action-setup@v4
+          cache: 'pnpm'
 
       - name: 4. Instalar dependências
         run: pnpm install --frozen-lockfile
@@ -33,13 +36,16 @@ jobs:
       - name: 1. Baixar o código do repositório
         uses: actions/checkout@v4
 
-      - name: 2. Configurar ambiente Node.js
+      - name: 2. Configurar PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: 3. Configurar ambiente Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: 3. Configurar PNPM
-        uses: pnpm/action-setup@v4
+          cache: 'pnpm'
 
       - name: 4. Instalar dependências
         run: pnpm install --frozen-lockfile
@@ -57,13 +63,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 2. Configurar ambiente Node.js
+      - name: 2. Configurar PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
+      - name: 3. Configurar ambiente Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: 3. Configurar PNPM
-        uses: pnpm/action-setup@v4
+          cache: 'pnpm'
 
       - name: 4. Instalar dependências
         run: pnpm install --frozen-lockfile
